<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Orders">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">



                <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    />

                <TextView
                    android:layout_marginEnd="50dp"
                    android:id="@+id/myCart_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/unbounded_reg"
                    android:text="@string/my_cart"
                    android:textAlignment="center"
                    android:textColor="#3D405B"
                    android:textSize="30sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/order_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/unbounded_reg"
                    android:text="@string/order"
                    android:textColor="#3D405B"
                    android:layout_weight="2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/unbounded_light"
                    android:text="@string/clear_all"
                    android:textColor="#F28482"
                    android:layout_weight="1"
                    android:textSize="20sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/dont_forget_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/unbounded_reg"
                android:text="@string/don_t_forget"
                android:textColor="#3D405B"
                android:textSize="22sp" />




            <LinearLayout
                android:id="@+id/go_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rectangle"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_step"
                    android:fontFamily="@font/unbounded_reg"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="100dp" />
                <TextView
                    android:id="@+id/dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/unbounded_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/overall_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_85_18"
                    android:layout_gravity="center"
                    android:fontFamily="@font/unbounded_bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>






        </LinearLayout>





    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>